#41 Reservation Endpoint fixed.